--- a/index.html
+++ b/index.html
@@ -36,6 +36,64 @@
     <a href="/">primary link</a> 
     <a href="/">secondary link</a>
 
+    <hr>
+
+    <h2>@list</h2>
+
+    <h3>unordered list</h3>
+
+    <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+    </ul>
+
+    <h3>unordered inline list</h3>
+
+    <ul>
+       <li>inline item one</li>
+       <li>inline item two</li>
+       <li>inline item three</li>
+   </ul>
+
+   <h3>reverse ordered list</h3>
+
+   <ol>
+       <li>milk</li>
+       <li>vegitable</li>
+       <li>bread</li>
+   </ol>
+
+   <hr>
+
+   <h2>@nav</h2>
+
+   <nav>
+    <div>iAmBrand</div>
+    <ul>
+        <li>
+            <a href="/">home</a>
+        </li>
+        <li>
+            <a href="/">product</a>
+        </li>
+        <li>
+            <a href="/">about</a>
+        </li>
+    </ul>
+   </nav>
+
+   <hr>
+
+   <h2>@header</h2>
+
+   <header>
+       <img src="images/hero.svg"/>
+       <h1>heading inside hero</h1>
+   </header>
+
+ 
+    
 
 
 
