--- a/index.html
+++ b/index.html
@@ -92,6 +92,34 @@
        <h1>heading inside hero</h1>
    </header>
 
+
+   <hr>
+
+   <h2>@section</h2>
+
+   <section>
+        <h3>white section</h3>
+        <p>this will have white background</p>
+   </section>
+
+   <section>
+         <h3>off white section</h3>
+         <p>this will have gray background</p>
+   </section>
+
+   <hr>
+
+   <h2>@footer</h2>
+
+   <footer>
+       <div>some small heading insaid footer</div>
+       <ul>
+        <li>social one</li>
+        <li>social two</li>
+        <li>social three</li>
+       </ul>
+   </footer>
+
  
     
 
