--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- <style>
+        body {
+           color: red;
+        }
+    </style> -->
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>harshal bhardwaj's component library</h1>
-    <p>I am attending neog.camp and i want to make a component library!</p>
+    <h1 id="id-header">harshal bhardwaj's component library</h1>
+    <p class="para">I am attending neog.camp and i want to make a component library!</p>
 
     <hr>
 
@@ -119,6 +126,11 @@
         <li>social three</li>
        </ul>
    </footer>
+
+
+   <hr>
+
+   <selection
 
  
     
