--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1>this is the biggest heading</h1>
     <h2>this is the second biggest heading</h2>
     <p>this is the normal text.</p>
+    <p>This paragraph will have a <strong>bold</strong> text</p>
     <small>this is the relatively small text</small>
 
     <hr>
@@ -29,15 +30,17 @@
     <div>this is a fluid container and it will go till the end of the page</div>
 
     <h3>centered container</h3>
-    <div>this is the centered container and it will go till the specified width</div>
+    <div class="container container-center">this is the centered container and it will go till the specified width</div>
 
     <hr>
 
     <h2>@links</h2>
 
-    <a href="/">primary link</a> 
-    <a href="/">secondary link</a>
+    <a class="link link-primary" href="/">primary link</a> 
+    <a class="link link-secondary" href="/">secondary link</a>
 
+
+    
     <hr>
 
     <h2>@list</h2>
