--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <a class="link link-secondary" href="/">secondary link</a>
 
 
-    
+
     <hr>
 
     <h2>@list</h2>
 
     <h3>unordered list</h3>
 
-    <ul>
+    <ul class="non-bullet">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
@@ -55,15 +55,15 @@
 
     <h3>unordered inline list</h3>
 
-    <ul>
-       <li>inline item one</li>
-       <li>inline item two</li>
-       <li>inline item three</li>
+    <ul class="non-bullet">
+       <li class="list-item-inline">inline item one</li>
+       <li class="list-item-inline">inline item two</li>
+       <li class="list-item-inline">inline item three</li>
    </ul>
 
    <h3>reverse ordered list</h3>
 
-   <ol>
+   <ol reversed>
        <li>milk</li>
        <li>vegitable</li>
        <li>bread</li>
