--- a/index.html
+++ b/index.html
@@ -135,18 +135,31 @@
 
     <h2>@footer</h2>
 
-    <footer>
-        <div>some small heading insaid footer</div>
-        <ul>
-            <li>social one</li>
-            <li>social two</li>
-            <li>social three</li>
+    <footer class="footer">
+        <div class="footer-header">some small heading insaid footer</div>
+        <ul class="social-links non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social one
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social two
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    social three
+                </a>
+            </li>
+
         </ul>
     </footer>
 
 
     <hr>
 
-    <selection </body>
+    
 
 </html>
